the_project_deploy/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: theproject-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: theproject
  template:
    metadata:
      labels:
        app: theproject
    spec:
      volumes:
        - name: cache-files
          persistentVolumeClaim:
            claimName: the-project-pvc
      containers:
        - name: theproject
          image: the-project:1.00
          imagePullPolicy: "IfNotPresent"
          volumeMounts:
            - mountPath: /usr/src/app/files
              name: cache-files
