the_project_deploy/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: theproject-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: theproject
  ports:
    - port: 1234
      targetPort: 4321
      protocol: TCP
