the_project_deploy/manifests/spa-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: theprojectspa-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: theprojectspa
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 80
