the_project_deploy/manifests/todo-back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: the-project-todo-back-svc
spec:
  type: ClusterIP
  selector:
    app: the-project-todo-back
  ports:
    - targetPort: 8080
      protocol: TCP
      port: 1234
