the_project_deploy/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: theproject-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: theprojectspa-svc
                port:
                  number: 1234
            pathType: Prefix
            path: /
          - backend:
              service:
                name: theproject-svc
                port:
                  number: 1234
            pathType: Prefix
            path: /api/image
          - backend:
              service:
                name: the-project-todo-back-svc
                port:
                  number: 1234
            pathType: Prefix
            path: /api/todos
